Fix the constraints visibility on the object page

--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -224,7 +224,7 @@ tr.thead-color {
 }
 
 .main-page {
-  padding-bottom: 2px;
+  padding-bottom: 62px;
 }
 
 .name a {
